--- a/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
@@ -161,6 +161,7 @@ config:
                 # notmatches: 'Tests that a <i>subject</i> is not matches a <i>search</i> (case-insensitive).<br />Example: <code>title notmatches "football"</code>'
 
 entry:
+    default_title: "Titolo del contenuto"
     page_titles:
         unread: 'Contenuti non letti'
         starred: 'Contenuti preferiti'
