--- a/src/Wallabag/CoreBundle/Resources/translations/messages.pt.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.pt.yml
@@ -161,6 +161,7 @@ config:
                 # notmatches: 'Tests that a <i>subject</i> is not matches a <i>search</i> (case-insensitive).<br />Example: <code>title notmatches "football"</code>'
 
 entry:
+    default_title: 'Título da entrada'
     page_titles:
         unread: 'Entradas não lidas'
         starred: 'Entradas destacadas'
