Add translations about latest Tag changes.
Add new translations in each language file.

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -399,6 +399,8 @@ tag:
     new:
         add: 'Add'
         placeholder: 'You can add several tags, separated by a comma.'
+    rename:
+        placeholder: 'You can update tag name.'
 
 export:
     footer_template: '<div style="text-align:center;"><p>Produced by wallabag with %method%</p><p>Please open <a href="https://github.com/wallabag/wallabag/issues">an issue</a> if you have trouble with the display of this E-Book on your device.</p></div>'
@@ -585,6 +587,7 @@ flashes:
     tag:
         notice:
             tag_added: 'Tag added'
+            tag_renamed: 'Tag renamed'
     import:
         notice:
             failed: 'Import failed, please try again.'
