--- a/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.oc.yml
+++ b/app/Resources/CraueConfigBundle/translations/CraueConfigBundle.oc.yml
@@ -36,5 +36,5 @@ share_public: Autorizar una URL publica pels articles
 download_images_enabled: Telecargar los imatges en local
 restricted_access: Activar l'autenticacion pels sites amb peatge
 api_user_registration: Autorizar los utilizaires a se marcar amb l'API
-store_article_headers: Activar se wallabag gardar las entèstas HTTP per cada article
+store_article_headers: Activar se wallabag garda las entèstas HTTP per cada article
 shaarli_share_origin_url: Activar lo partatge de l’url amb Shaarli, se lo servici es activat
