--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -158,7 +158,7 @@ config:
                 or: 'One rule OR another'
                 and: 'One rule AND another'
                 matches: 'Tests that a <i>subject</i> matches a <i>search</i> (case-insensitive).<br />Example: <code>title matches "football"</code>'
-                notmatches: 'Tests that a <i>subject</i> doesn't match a <i>search</i> (case-insensitive).<br />Example: <code>title notmatches "football"</code>'
+                notmatches: 'Tests that a <i>subject</i> doesn\'t match match match a <i>search</i> (case-insensitive).<br />Example: <code>title notmatches "football"</code>'
 
 entry:
     default_title: 'Title of the entry'
