--- a/src/Wallabag/CoreBundle/Resources/translations/messages.tr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.tr.yml
@@ -158,7 +158,7 @@ config:
                 or: 'Bir kural veya birbaşkası'
                 and: 'Bir kural ve diğeri'
                 # matches: 'Tests that a <i>subject</i> matches a <i>search</i> (case-insensitive).<br />Example: <code>title matches "football"</code>'
-                # notmatches: 'Tests that a <i>subject</i> doesn't match a <i>search</i> (case-insensitive).<br />Example: <code>title notmatches "football"</code>'
+                # notmatches: 'Tests that a <i>subject</i> doesn\'t match match match a <i>search</i> (case-insensitive).<br />Example: <code>title notmatches "football"</code>'
 
 entry:
     default_title: 'Makalenin başlığı'
