--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
@@ -72,7 +72,7 @@ config:
             300_word: "Je lis environ 300 mots par minute"
             400_word: "Je lis environ 400 mots par minute"
         action_mark_as_read:
-            label: "Que souhaitez-vous après avoir marqué un article comme lu ou favoris ?"
+            label: "Que faire lorsqu'un article est supprimé, marqué comme lu ou marqué comme favoris ?"
             redirect_homepage: "Retourner à la page d’accueil"
             redirect_current_page: "Rester sur la page actuelle"
         pocket_consumer_key_label: "Clé d’authentification Pocket pour importer les données"
