--- a/src/Wallabag/CoreBundle/Resources/translations/messages.tr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.tr.yml
@@ -59,6 +59,7 @@ config:
         password: 'Şifre'
         rules: 'Etiketleme kuralları'
         new_user: 'Bir kullanıcı ekle'
+        # reset: 'Reset area'
     form:
         save: 'Kaydet'
     form_settings:
