--- a/src/Wallabag/CoreBundle/Resources/translations/messages.pl.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.pl.yml
@@ -400,7 +400,7 @@ tag:
         add: 'Dodaj'
         placeholder: 'Możesz dodać kilka tagów, oddzielając je przecinkami.'
     rename:
-        # placeholder: 'You can update tag name.'
+        placeholder: 'Możesz zaktualizować nazwę taga.'
 
 export:
      footer_template: '<div style="text-align:center;"><p>Stworzone przez wallabag z %method%</p><p>Proszę zgłoś <a href="https://github.com/wallabag/wallabag/issues">sprawę</a>, jeżeli masz problem z wyświetleniem tego e-booka na swoim urządzeniu.</p></div>'
@@ -587,7 +587,7 @@ flashes:
     tag:
         notice:
             tag_added: 'Tag dodany'
-            # tag_renamed: 'Tag renamed'
+            tag_renamed: 'Nazwa taga zmieniona'
     import:
         notice:
             failed: 'Nieudany import, prosimy spróbować ponownie.'
