--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
@@ -37,6 +37,7 @@ menu:
         add_new_entry: "Sauvegarder un nouvel article"
         search: "Rechercher"
         filter_entries: "Filtrer les articles"
+        random_entry: Aller à un article aléatoire de cette liste
         export: "Exporter"
     search_form:
         input_label: "Saisissez votre terme de recherche"
