--- a/src/Wallabag/CoreBundle/Resources/translations/messages.pt.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.pt.yml
@@ -37,6 +37,7 @@ menu:
         add_new_entry: 'Adicionar uma nova entrada'
         search: 'Pesquisa'
         filter_entries: 'Filtrar entradas'
+        # random_entry: Jump to a random entry from that list
         export: 'Exportar'
     search_form:
         input_label: 'Digite aqui sua pesquisa'
