--- a/src/Wallabag/CoreBundle/Resources/translations/messages.ro.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.ro.yml
@@ -37,6 +37,7 @@ menu:
         add_new_entry: 'Introdu un nou articol'
         search: 'Căutare'
         filter_entries: 'Filtrează articolele'
+        # random_entry: Jump to a random entry from that list
         # export: 'Export'
     search_form:
         input_label: 'Introdu căutarea ta'
