add random_article translation, fix #3920

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
@@ -38,6 +38,7 @@ menu:
         search: 'Suche'
         filter_entries: 'Artikel filtern'
         export: 'Exportieren'
+        random_entry: 'Zufälliger Artikel'
     search_form:
         input_label: 'Suchbegriff hier eingeben'
 
