--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
@@ -38,6 +38,7 @@ menu:
         search: 'جستجو'
         filter_entries: 'فیلترکردن مقاله‌ها'
         export: 'برون‌بری'
+        random_entry: 'مقاله تصادفی'
     search_form:
         input_label: 'جستجوی خود را این‌جا بنویسید:'
 
