--- a/src/Wallabag/CoreBundle/Resources/translations/messages.pl.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.pl.yml
@@ -38,6 +38,7 @@ menu:
         search: 'Szukaj'
         filter_entries: 'Filtruj wpisy'
         export: 'Eksportuj'
+        random_entry: 'Losowy artykuł'
     search_form:
         input_label: 'Wpisz swoje zapytanie tutaj'
 
