--- a/src/Wallabag/CoreBundle/Resources/translations/messages.th.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.th.yml
@@ -38,6 +38,7 @@ menu:
         search: 'ค้นหา'
         filter_entries: 'ตัวกรองรายการ'
         export: 'นำข้อมูลออก'
+        random_entry: 'บทความแบบสุ่ม'
     search_form:
         input_label: 'ค้นหาที่นี้'
 
