--- a/src/Wallabag/CoreBundle/Resources/translations/messages.th.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.th.yml
@@ -54,7 +54,7 @@ config:
     page_title: 'กำหนดค่า'
     tab_menu:
         settings: 'ตั้งค่า'
-        rss: 'RSS'
+        feed: 'RSS'
         user_info: 'ข้อมูลผู้ใช้'
         password: 'รหัสผ่าน'
         rules: 'การแท็กข้อบังคับ'
@@ -85,19 +85,19 @@ config:
         help_reading_speed: "wallabag จะคำนวณเวลาการอ่านในแต่ละรายการซึ่งคุณสามารถกำหนดได้ที่นี้,ต้องขอบคุณรายการนี้,หากคุณเป็นนักอ่านที่เร็วหรือช้า wallabag จะทำการคำนวณเวลาที่อ่านใหม่ในแต่ละรายการ"
         help_language: "คุณสามารถเปลี่ยภาษาของ wallabag interface ได้"
         help_pocket_consumer_key: "การ้องขอการเก็บการนำข้อมูลเข้า คุณสามารถสร้างบัญชีการเก็บของคุณ"
-    form_rss:
+    form_feed:
         description: 'RSS จะเก็บเงื่อนไขโดย wallabag ต้องยอมรับการอ่านรายการของคุณกับผู้อ่านที่ชอบ RSS คุณต้องทำเครื่องหมายก่อน'
         token_label: 'เครื่องหมาย RSS'
         no_token: 'ไม่มีเครื่องหมาย'
         token_create: 'สร้างเครื่องหมาย'
         token_reset: 'ทำเครื่องหมาย'
-        rss_links: 'ลิงค์ RSS'
-        rss_link:
+        feed_links: 'ลิงค์ RSS'
+        feed_link:
             unread: 'ยังไมได้่อ่าน'
             starred: 'ทำการแสดง'
             archive: 'เอกสาร'
             all: 'ทั้งหมด'
-        rss_limit: 'จำนวนไอเทมที่เก็บ'
+        feed_limit: 'จำนวนไอเทมที่เก็บ'
     form_user:
         # two_factor_description: "Enabling two factor authentication means you'll receive an email with a code OR need to use an OTP app (like Google Authenticator, Authy or FreeOTP) to get a one time code on every new untrusted connection. You can't choose both option."
         name_label: 'ชื่อ'
@@ -369,7 +369,7 @@ quickstart:
         title: 'กำหนดค่าแอพพลิเคชั่น'
         description: 'ภายใน order จะมี application suit ของคุณ, จะมองหาองค์ประกอบของ wallabag'
         language: 'เปลี่ยนภาษาและออกแบบ'
-        rss: 'เปิดใช้ RSS'
+        feed: 'เปิดใช้ RSS'
         tagging_rules: 'เขียนข้อบังคับการแท็กอัตโนมัติของบทความของคุณ'
     admin:
         title: 'ผู้ดูแลระบบ'
@@ -586,10 +586,10 @@ flashes:
             password_updated: 'อัปเดตรหัสผ่าน'
             password_not_updated_demo: "In demonstration mode, you can't change password for this user."
             user_updated: 'อัปเดตข้อมูล'
-            rss_updated: 'อัปเดตข้อมูล RSS'
+            feed_updated: 'อัปเดตข้อมูล RSS'
             tagging_rules_updated: 'อัปเดตการแท็กข้อบังคับ'
             tagging_rules_deleted: 'การลบข้อบังคับของแท็ก'
-            rss_token_updated: 'อัปเดตเครื่องหมาย RSS '
+            feed_token_updated: 'อัปเดตเครื่องหมาย RSS '
             annotations_reset: รีเซ็ตหมายเหตุ
             tags_reset: รีเซ็ตแท็ก
             entries_reset: รีเซ็ตรายการ
